# chatgpt-rust

./: .env  Cargo.toml  README.md
src/: main.rs  oai_choices.rs  oai_request.rs  oai_response.rs
